2002-03-27  Richard Williamson  <rjw@apple.com>

        Added initial-layout-after-delay-if-not-layed-out-yet feature.
        
	* Misc.subproj/WebKitDebug.h:
	* WebKit.pbproj/project.pbxproj:
	* WebView.subproj/IFBaseWebControllerPrivate.mm: (-[IFBaseWebController
	_mainReceivedProgress:forResource:fromDataSource:]):
	* WebView.subproj/IFPreferences.mm: (+[IFPreferences load]), (-[IFPreferences
	setPluginsEnabled:]), (-[IFPreferences _initialTimedLayoutDelay]),
	(-[IFPreferences _initialTimedLayoutEnabled]):
	* WebView.subproj/IFWebFramePrivate.mm: (-[IFWebFrame
	_transitionProvisionalToCommitted]), (-[IFWebFrame _initialLayout:]),
	(-[IFWebFrame _state]):

2002-03-27  Kenneth Kocienda  <kocienda@apple.com>

        Changed loadProgress->bytesSoFar to use [sender contentLengthReceived]
        instead of the size of the chunk that was delivered in the callback.
        This makes the activity window data more correct than it was.

	* WebView.subproj/IFMainURLHandleClient.mm: (-[IFMainURLHandleClient
	IFURLHandle:resourceDataDidBecomeAvailable:]):

2002-03-27  Chris Blumenberg  <cblu@apple.com>

	Now setting the modifier bit for the activate and cursor events.

	* Plugins.subproj/IFPluginView.h:
	* Plugins.subproj/IFPluginView.mm: (-[IFPluginView drawRect:]), (-[IFPluginView
	windowBecameKey:]), (-[IFPluginView windowResignedKey:]), (-[IFPluginView
	mouseEntered:]), (-[IFPluginView mouseExited:]):

2002-03-27  Darin Adler  <darin@apple.com>

	* WebView.subproj/IFPreferences.mm: (+[IFPreferences load]): Switch back
        to serif font, since using Luicida Grande was exposing some font bugs.

2002-03-26  Maciej Stachowiak  <mjs@apple.com>

	* WebKit.pbproj/project.pbxproj: Fixed to build with standalone
	libJavaScriptCore.dylib.

2002-03-26  Kenneth Kocienda  <kocienda@apple.com>

        Changes to help the transition to the new build system which unifies
        our development build setting with the settings we use to ship
        releases.

	* Makefile.am: